# advent-of-code

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  flake.nix
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: aoc.cpp  aoc.hpp  main.cpp
source/2015/01/: solution.cpp
source/2015/02/: solution.cpp
source/2015/03/: solution.cpp
source/2015/04/: solution.cpp
source/2015/05/: solution.cpp
source/2015/06/: solution.cpp
source/2015/07/: solution.cpp
source/2015/08/: solution.cpp
source/2015/09/: solution.cpp
source/2015/10/: solution.cpp
source/2015/11/: solution.cpp
source/2015/12/: solution.cpp
source/2015/13/: input.txt  solution.cpp
source/2015/14/: solution.cpp
source/2015/15/: solution.cpp
source/2015/16/: solution.cpp
source/2015/17/: solution.cpp
source/2015/18/: solution.cpp
source/2015/19/: solution.cpp
source/2015/20/: solution.cpp
source/2015/21/: solution.cpp
source/2015/22/: solution.cpp
source/2015/23/: solution.cpp
source/2015/24/: solution.cpp
source/2015/25/: solution.cpp
source/2016/01/: solution.cpp
source/2016/02/: solution.cpp
source/2016/03/: solution.cpp
source/2016/04/: solution.cpp
source/2016/05/: solution.cpp
source/2016/06/: solution.cpp
source/2016/07/: solution.cpp
source/2016/08/: solution.cpp
source/2016/09/: solution.cpp
source/2016/10/: solution.cpp
source/2016/11/: solution.cpp
source/2016/12/: solution.cpp
source/2016/13/: solution.cpp
source/2016/14/: solution.cpp
source/2016/15/: solution.cpp
source/2016/16/: solution.cpp
source/2016/17/: solution.cpp
source/2016/18/: solution.cpp
source/2016/19/: solution.cpp
source/2016/20/: solution.cpp
source/2016/21/: solution.cpp
source/2016/22/: solution.cpp
source/2016/23/: solution.cpp
source/2016/24/: solution.cpp
source/2016/25/: solution.cpp
source/2016/asmbunny/: asmbunny.hpp
source/2017/01/: solution.cpp
source/2017/02/: solution.cpp
source/2017/03/: solution.cpp
source/2017/04/: solution.cpp
source/2017/05/: input.txt  solution.cpp
source/2017/06/: solution.cpp
source/2017/07/: solution.cpp
source/2017/08/: solution.cpp
source/2017/09/: solution.cpp
source/2017/10/: solution.cpp
source/2017/11/: solution.cpp
source/2017/12/: input.txt  solution.cpp
source/2017/13/: solution.cpp
source/2017/14/: solution.cpp
source/2017/15/: solution.cpp
source/2017/16/: solution.cpp
source/2017/17/: solution.cpp
source/2017/18/: solution.cpp
source/2017/19/: solution.cpp
source/2017/20/: solution.cpp
source/2017/21/: solution.cpp
source/2017/22/: solution.cpp
source/2017/23/: solution.cpp
source/2017/24/: solution.cpp
source/2017/25/: solution.cpp
source/2018/01/: solution.cpp
source/2018/02/: solution.cpp
source/2018/03/: solution.cpp
source/2018/04/: solution.cpp
source/2018/05/: solution.cpp
source/2018/06/: solution.cpp
source/2018/07/: solution.cpp
source/2018/08/: solution.cpp
source/2018/09/: solution.cpp
source/2018/10/: solution.cpp
source/2018/11/: solution.cpp
source/2018/12/: solution.cpp
source/2018/13/: solution.cpp
source/2018/14/: solution.cpp
source/2018/15/: solution.cpp
source/2018/16/: solution.cpp
source/2018/17/: solution.cpp
source/2018/18/: solution.cpp
source/2018/19/: solution.cpp
source/2018/20/: solution.cpp
source/2018/21/: solution.cpp
source/2018/22/: solution.cpp
source/2018/23/: solution.cpp
source/2018/24/: solution.cpp
source/2018/25/: solution.cpp
source/2019/01/: solution.cpp
source/2019/02/: solution.cpp
source/2019/03/: solution.cpp
source/2019/04/: solution.cpp
source/2019/05/: solution.cpp
source/2019/06/: input.txt  solution.cpp
source/2019/intcode/: intcode.hpp
source/2020/01/: solution.cpp
source/2020/02/: solution.cpp
source/2020/03/: solution.cpp
source/2020/04/: solution.cpp
source/2020/05/: solution.cpp
source/2020/06/: solution.cpp
source/2020/07/: input.txt  solution.cpp
source/2020/08/: solution.cpp
source/2020/09/: solution.cpp
source/2020/10/: solution.cpp
source/2020/11/: solution.cpp
source/2020/12/: solution.cpp
source/2020/13/: solution.cpp
source/2020/14/: solution.cpp
source/2020/15/: solution.cpp
source/2020/16/: solution.cpp
source/2020/17/: solution.cpp
source/2020/18/: solution.cpp
source/2020/19/: input.txt  solution.cpp
source/2020/20/: solution.cpp
source/2020/21/: solution.cpp
source/2020/22/: solution.cpp
source/2020/23/: solution.cpp
source/2020/24/: solution.cpp
source/2020/25/: solution.cpp
source/2022/01/: input.txt  solution.cpp
source/2022/02/: solution.cpp
source/2022/03/: solution.cpp
source/2022/04/: solution.cpp
source/2022/05/: input.txt  solution.cpp
source/2022/06/: solution.cpp
source/2022/07/: solution.cpp
source/2022/08/: solution.cpp
source/2022/09/: solution.cpp
source/2022/10/: solution.cpp
source/2022/11/: solution.cpp
source/2022/12/: solution.cpp
source/2022/13/: solution.cpp
source/2022/14/: solution.cpp
source/2022/15/: solution.cpp
source/2022/16/: solution.cpp
source/2022/17/: solution.cpp
source/2022/18/: solution.cpp
source/2022/19/: solution.cpp
source/2022/20/: solution.cpp
source/2022/21/: solution.cpp
source/2022/22/: solution.cpp
source/2022/23/: solution.cpp
source/2022/24/: input.txt  solution.cpp
source/2022/25/: solution.cpp
source/2023/01/: solution.cpp
source/2023/02/: solution.cpp
source/2023/03/: solution.cpp
source/2023/04/: input.txt  solution.cpp
source/2023/05/: solution.cpp
source/2023/06/: solution.cpp
source/2023/07/: solution.cpp
source/2023/08/: solution.cpp
source/2023/09/: solution.cpp
source/2023/10/: solution.cpp
source/util/: constexpr-xxh3.h  dynamic_bitset.hpp  md5.cpp  md5.h  priority_queue.hpp  random.hpp
test/: CMakeLists.txt
test/source/: advent2015.hpp  advent2016.hpp  advent2017.hpp  advent2018.hpp  advent2020.hpp  advent2022.hpp  advent2023.hpp  advent2024.hpp  aoc_test.cpp  ut.hpp
(+73 files in other folders)
